Added global exception handling. Changed lombok version to work with java24. Changed to java24.